docs(user): add swagger docs to find my account and update my account route
