# controller/user_controller.go
@@ -3,9 +3,11 @@ package controller
 import (
 	"github.com/asaskevich/govalidator"
 	"github.com/gofiber/fiber/v2"
+
 	"github.com/spacenotes-id/server/dto"
 	"github.com/spacenotes-id/server/helper/auth"
 	"github.com/spacenotes-id/server/helper/exception"
+	"github.com/spacenotes-id/server/helper/validation"
 	"github.com/spacenotes-id/server/usecase"
 )
 
@@ -13,8 +15,23 @@ type UserController struct {
 	userUsecase *usecase.UserUsecase `di.inject:"userUsecase"`
 }
 
+// FindMyAccount godoc
+//
+//	@Summary		Find my account
+//	@Description	Show my account data
+//	@Tags			users
+//	@Produce		json
+//	@Success		200	{object}	dto.FindUserByIDResponse
+//	@Failure		400	{object}	exception.HttpError
+//	@Failure		401	{object}	exception.HttpError
+//	@Failure		404	{object}	exception.HttpError
+//	@Router			/users/me [get]
+//	@Security		ApiKeyAuth
 func (u *UserController) FindMyAccount(c *fiber.Ctx) error {
-	userID := auth.GetUserIDFromClaims(c)
+	userID, err := auth.GetUserIDFromClaims(c)
+	if err != nil {
+		return err
+	}
 
 	result, errFind := u.userUsecase.FindUserByID(userID)
 	if errFind != nil {
@@ -24,17 +41,31 @@ func (u *UserController) FindMyAccount(c *fiber.Ctx) error {
 	return c.JSON(result)
 }
 
+// UpdateMyAccount godoc
+//
+//	@Summary		Update my account
+//	@Description	Update my account data
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			account	body		dto.UpdateUserRequest	true	"Update user payload"
+//	@Success		200		{object}	dto.UpdateUserResponse
+//	@Failure		400		{object}	exception.HttpError
+//	@Failure		401		{object}	exception.HttpError
+//	@Failure		404		{object}	exception.HttpError
+//	@Failure		500		{object}	exception.HttpError
+//	@Failure		422		{object}	exception.ValErrors
+//	@Router			/users/me [put]
+//	@Security		ApiKeyAuth
 func (u *UserController) UpdateMyAccount(c *fiber.Ctx) error {
-	userID := auth.GetUserIDFromClaims(c)
-
-	payload := new(dto.UpdateUserRequest)
-	if err := c.BodyParser(payload); err != nil {
-		return fiber.
-			NewError(fiber.StatusUnprocessableEntity, "Failed to parse body")
+	userID, err := auth.GetUserIDFromClaims(c)
+	if err != nil {
+		return err
 	}
 
-	if _, err := govalidator.ValidateStruct(payload); err != nil {
-		return exception.NewValidationError(err)
+	payload := new(dto.UpdateUserRequest)
+	if err := validation.ValidateBody(c, payload); err != nil {
+		return err
 	}
 
 	result, errUpdate := u.userUsecase.UpdateUser(userID, payload)
@@ -46,7 +77,10 @@ func (u *UserController) UpdateMyAccount(c *fiber.Ctx) error {
 }
 
 func (u *UserController) UpdateMyEmail(c *fiber.Ctx) error {
-	userID := auth.GetUserIDFromClaims(c)
+	userID, err := auth.GetUserIDFromClaims(c)
+	if err != nil {
+		return err
+	}
 
 	payload := new(dto.UpdateEmailRequest)
 	if err := c.BodyParser(payload); err != nil {
@@ -67,7 +101,10 @@ func (u *UserController) UpdateMyEmail(c *fiber.Ctx) error {
 }
 
 func (u *UserController) UpdateMyPassword(c *fiber.Ctx) error {
-	userID := auth.GetUserIDFromClaims(c)
+	userID, err := auth.GetUserIDFromClaims(c)
+	if err != nil {
+		return err
+	}
 
 	payload := new(dto.UpdatePasswordRequest)
 	if err := c.BodyParser(payload); err != nil {
@@ -88,7 +125,10 @@ func (u *UserController) UpdateMyPassword(c *fiber.Ctx) error {
 }
 
 func (u *UserController) DeleteMyAccount(c *fiber.Ctx) error {
-	userID := auth.GetUserIDFromClaims(c)
+	userID, err := auth.GetUserIDFromClaims(c)
+	if err != nil {
+		return err
+	}
 
 	result, err := u.userUsecase.DeleteUser(userID)
 	if err != nil {
